tests/value-restriction.m31.ref
File "./value-restriction.m31", line 4, characters 38-39: Syntax error
  Unexpected: ->
