tests/value-restriction.m31

dynamic r (* : 'a option *) = None

let f (* 'b -> jdg option *) = fun _ => match current r with Some (|- _) => r end

do now r = Some "foo" in match f () with Some ?x => x end

